# azimuth_runtime

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: rust.yml
src/: common.rs  config.rs  main.rs
src/engine/: mod.rs  opcode_handler.rs  opcodes.rs  runner.rs  stack.rs  stackable.rs
src/engine/stack/: convert.rs  mod.rs  stackable.rs
src/loader/: constant_table.rs  mod.rs  parser.rs  runnable.rs
src/memory/: heap.rs  mod.rs
src/memory/allocators/: arena.rs  general.rs  mod.rs
tests/: assembler.rs  runner.rs
tests/programs/arithmetic/simple/: add.test  div.test  sub.test
tests/programs/basics/: i4const0.test  nop.test
