[package]
name = "azimuth_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.1.1"
constcat = "0.6.1"
datatest-stable = "0.3.3"

[[test]]
name = "runner"
harness = false

[lints.clippy]
perf = "deny"
pedantic = "warn"
allow_attributes = "deny"
as_underscore = "deny"
assigning_clones = "deny"
big_endian_bytes = "deny"
boxed_local = "deny"
cast_abs_to_unsigned = "deny"
cast_enum_truncation = "deny"
cast_lossless = "deny"
cast_nan_to_int = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
cfg_not_test = "deny"
char_lit_as_u8 = "deny"
checked_conversions = "deny"
clear_with_drain = "deny"
clone_on_copy = "deny"
clone_on_ref_ptr = "deny"
cloned_instead_of_copied = "deny"
cmp_null = "deny"
cmp_owned = "deny"
cognitive_complexity = "warn"
collapsible_else_if = "deny"
collapsible_if = "deny"
collapsible_match = "deny"
collapsible_str_replace = "deny"
collection_is_never_read = "deny"
comparison_chain = "deny"
comparison_to_empty = "deny"
const_is_empty = "deny"
copy_iterator = "deny"
crosspointer_transmute = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
declare_interior_mutable_const = "deny"
default_constructed_unit_structs = "deny"
default_instead_of_iter_empty = "deny"
default_numeric_fallback = "deny"
default_trait_access = "deny"
default_union_representation = "deny"
deprecated_cfg_attr = "deny"
deprecated_clippy_cfg_attr = "deny"
deprecated_semver = "deny"
deref_addrof = "deny"
double_comparisons = "deny"
double_ended_iterator_last = "deny"
double_must_use = "deny"
double_parens = "deny"
drain_collect = "deny"
drop_non_drop = "deny"
duplicate_mod = "deny"
duplicate_underscore_argument = "deny"
duplicated_attributes = "deny"
duration_subsec = "deny"
enum_glob_use = "deny"
