[package]
name = "azimuth_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_cmd = "2.1.1"
constcat = "0.6.1"
datatest-stable = "0.3.3"

[[test]]
name = "runner"
harness = false

[lints.clippy]
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
unwrap_used = "deny"
undocumented_unsafe_blocks = "allow"
question_mark_used = "allow"
implicit_return = "allow"
single_call_fn = "allow"
